[package]
name = "zenn"
version = "0.1.0"
edition = "2021"
authors = ["ryohidaka <39184410+ryohidaka@users.noreply.github.com>"]
license = "MIT"
description = "Unofficial ZennAPI Client."
repository = "https://github.com/ryohidaka/zenn-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
serde = "1.0.183"
serde_derive = "1.0"
serde_json = "1.0.104"
tokio = {version = "1.30.0", features = ["macros", "rt-multi-thread"]}
